# ai-portfolio-server

./: .env.example  CLAUDE.md  Dockerfile.a2a  Dockerfile.mcp  README.md  pyproject.toml
src/: a2a_server.py  mcp_server.py
src/data/: about.py  contact.py  experience.py  projects.py  services.py  skills.py
