[project]
name = "mario-ai-portfolio"
version = "0.1.0"
description = "Personal AI portfolio — MCP server + A2A agent for potential clients"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.23",
    "fastmcp>=2.14.5",
    "huggingface-hub>=1.4.1",
    "python-dotenv>=1.2.1",
]
